Fix extra space under logo img

--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -31,6 +31,7 @@
 
 .logo img {
     height: 40px;
+    display: block;
 }
 
 @media (min-width: v.$media-md) {
